[gd_scene load_steps=12 format=3 uid="uid://ci2oao30ktdyn"]

[ext_resource type="Texture2D" uid="uid://byby5rnjw02sl" path="res://icon.svg" id="1_oircm"]
[ext_resource type="Script" path="res://Content/Tile/tile.gd" id="1_pcm8c"]
[ext_resource type="Texture2D" uid="uid://cs6jdtv61yeik" path="res://art/pieces/outline/tileBlack.png" id="2_0t23x"]
[ext_resource type="Shader" path="res://art/shaders/Flash.gdshader" id="3_5y52o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8r60o"]
size = Vector2(108, 108)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_86kwf"]
shader = ExtResource("3_5y52o")
shader_parameter/tint = Color(1, 1, 1, 1)
shader_parameter/progress = 1.0

[sub_resource type="Curve" id="Curve_ny4g5"]
max_value = 2.0
_data = [Vector2(0, 1.36364), 0.0, 0.0, 0, 0, Vector2(0.0405797, 0.8), 0.0, 0.0, 0, 0, Vector2(1, 0.345454), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_7oicm"]
offsets = PackedFloat32Array(0, 0.780255, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Animation" id="Animation_p6br3"]
resource_name = "Anim"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_ah0iw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_82s0g"]
_data = {
"Anim": SubResource("Animation_p6br3"),
"RESET": SubResource("Animation_ah0iw")
}

[node name="Tile" type="Area2D"]
scale = Vector2(1.5, 1.5)
monitoring = false
monitorable = false
script = ExtResource("1_pcm8c")

[node name="SpriteHolder" type="Node2D" parent="."]
position = Vector2(54, 54)

[node name="Sprite2D" type="Sprite2D" parent="SpriteHolder"]
texture = ExtResource("2_0t23x")
centered = false
offset = Vector2(-54, -54)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(54, 54)
shape = SubResource("RectangleShape2D_8r60o")

[node name="DeathParticle" type="CPUParticles2D" parent="."]
z_index = 5
material = SubResource("ShaderMaterial_86kwf")
position = Vector2(54, 54)
emitting = false
amount = 1
lifetime = 5.0
one_shot = true
speed_scale = 2.0
texture = ExtResource("1_oircm")
direction = Vector2(0, -1)
gravity = Vector2(0, 1500)
initial_velocity_min = 650.0
initial_velocity_max = 700.0
angular_velocity_min = -400.0
angular_velocity_max = 400.0
scale_amount_min = 0.75
scale_amount_max = 0.75
scale_amount_curve = SubResource("Curve_ny4g5")
color_ramp = SubResource("Gradient_7oicm")

[node name="AnimationPlayer" type="AnimationPlayer" parent="DeathParticle"]
libraries = {
"": SubResource("AnimationLibrary_82s0g")
}

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
